import { useDebounceCallback } from '@digdir/designsystemet-react';
import { useState } from 'react';
import { expect, fn, userEvent, within } from 'storybook/test';
import preview from '.storybook/preview';
import { advancedCodeDocs } from '.storybook/utils/sourceTransformers';
import { assertExists } from '../../utilities/helpers/assertExists';
import { Chip } from '../chip/Chip';
import { Field } from '../field/Field';
import { Skeleton } from '../skeleton/Skeleton';
import { Spinner } from '../spinner/Spinner';
import { Label } from '../typography/label/Label';
import { Paragraph } from '../typography/paragraph/Paragraph';
import { Prose } from '../typography/prose/Prose';
import { Search } from './Search';
import { Search as FakeSearch } from './docs/FakeSearch';
import { SearchButton } from './docs/FakeSearchButton';
import { SearchClear } from './docs/FakeSearchClear';
import { SearchInput } from './docs/FakeSearchInput';

const meta = preview.meta({
  component: FakeSearch,
  subcomponents: {
    'Search.Button': SearchButton,
    'Search.Clear': SearchClear,
    'Search.Input': SearchInput,
  },
  tags: ['digdir'],
  parameters: {
    componentOrigin: {
      originator: 'digdir',
      details: 'Vi har fjernet mulighet for fargevalg.',
    },
    layout: 'centered',
  },
});

const onSubmit = fn<React.SubmitEventHandler<HTMLFormElement>>((e) => {
  e.preventDefault();
});

export const Preview = meta.story({
  render: (args) => (
    <form onSubmit={onSubmit}>
      <Search {...args}>
        <Search.Input aria-label="Søk" />
        <Search.Clear />
        <Search.Button />
      </Search>
    </form>
  ),
  play: async ({ canvasElement, step }) => {
    const canvas = within(canvasElement);
    const input = canvas.getByRole('searchbox');

    await step('Search input is rendered', async () => {
      expect(input).toBeInTheDocument();
    });

    await step('User can type in the search input', async () => {
      await userEvent.clear(input);
      await userEvent.type(input, 'Test search');
      expect(input).toHaveValue('Test search');
    });

    await step('Clicking clear button clears the search input', async () => {
      const clearButton = assertExists(
        canvasElement.querySelector('button[type="reset"]'),
        'Clear button not found',
      );
      await userEvent.click(clearButton);
      expect(onSubmit).not.toHaveBeenCalled();
      expect(input).toHaveValue('');
    });

    await step('Search button is rendered and clickable', async () => {
      const searchButton = assertExists(
        canvasElement.querySelector('button[type="submit"]'),
        'Search button not found',
      );
      await userEvent.click(searchButton);
      expect(onSubmit).toHaveBeenCalled();
    });

    await userEvent.keyboard('{Tab}');
  },
});

export const Controlled = meta.story({
  parameters: {
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
    },
    docs: advancedCodeDocs,
  },
  render(args) {
    const [inputValue, setInputValue] = useState('');
    const [searchTerm, setSearchTerm] = useState<string>('');

    const handleSubmit = (e: React.SubmitEvent) => {
      e.preventDefault();
      setSearchTerm(inputValue);
    };

    return (
      <Prose>
        <style>
          {`
        .example-form {
          display: flex;
          flex-direction: column;
          gap: var(--ds-size-4);
        }
        .example-chip-group {
          display: flex;
          align-items: center;
          gap: var(--ds-size-4);
        }`}
        </style>
        <form className="example-form" onSubmit={handleSubmit}>
          <Search {...args}>
            <Search.Input
              id="search-input-controlled"
              aria-label="Søk"
              value={inputValue}
              onChange={(e) => setInputValue(e.target.value)}
            />
            <Search.Clear />
            <Search.Button type="submit" />
          </Search>
          <div className="example-chip-group">
            <Paragraph data-size="sm">Hurtigsøk:</Paragraph>
            <Chip.Button
              onClick={() => {
                setInputValue('Læreplaner');
                setSearchTerm('Læreplaner');
              }}
            >
              Læreplaner
            </Chip.Button>
            <Chip.Button
              onClick={() => {
                setInputValue('Skole');
                setSearchTerm('Skole');
              }}
            >
              Skole
            </Chip.Button>
            <Chip.Button
              onClick={() => {
                setInputValue('Eksamen');
                setSearchTerm('Eksamen');
              }}
            >
              Eksamen
            </Chip.Button>
          </div>
        </form>
        {searchTerm && (
          <>
            <Paragraph>Søker etter: {searchTerm}</Paragraph>
            <div className="example-form">
              <Skeleton variant="rectangle" height="150px" />
              <Skeleton variant="rectangle" width="200px" />
              <Skeleton variant="rectangle" />
              <Skeleton variant="rectangle" />
              <Skeleton variant="rectangle" />
              <Skeleton variant="rectangle" width="50px" />
            </div>
          </>
        )}
      </Prose>
    );
  },
});

export const Variants = meta.story({
  render: (args) => (
    <Prose>
      <Search {...args}>
        <Search.Input aria-label="Søk" />
        <Search.Clear />
      </Search>
      <Search {...args}>
        <Search.Input aria-label="Søk" />
        <Search.Clear />
        <Search.Button />
      </Search>
      <Search {...args}>
        <Search.Input aria-label="Søk" />
        <Search.Clear />
        <Search.Button variant="secondary" />
      </Search>
    </Prose>
  ),
});

export const WithLabel = meta.story({
  render: (args) => (
    <Field>
      <Label>Søk i læreplaner</Label>
      <Search {...args}>
        <Search.Input name="cat-search" />
        <Search.Clear />
        <Search.Button />
      </Search>
    </Field>
  ),
});

export const Form = meta.story({
  parameters: {
    docs: advancedCodeDocs,
  },
  render(args) {
    const [value, setValue] = useState<string>();
    const [submittedValue, setSubmittedValue] = useState<string>();

    return (
      <Prose>
        <form
          onSubmit={(e) => {
            // Prevent navigation from Storybook
            e.preventDefault();
            setSubmittedValue(value);
          }}
        >
          <Search {...args}>
            <Search.Input
              aria-label="Søk"
              value={value}
              onChange={(e) => setValue(e.target.value)}
            />
            <Search.Clear />
            <Search.Button />
          </Search>
        </form>
        {submittedValue && (
          <Paragraph data-size="md">Søkeord: {submittedValue}</Paragraph>
        )}
      </Prose>
    );
  },
});

export const LiveSearch = meta.story({
  parameters: {
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
    },
    docs: advancedCodeDocs,
  },
  render(args) {
    const [value, setValue] = useState<string>('');
    const [searchValue, setSearchValue] = useState<string>('');
    const setSearchValueDebounced = useDebounceCallback(setSearchValue, 500);

    return (
      <Prose>
        <Search {...args}>
          <Search.Input
            aria-label="Søk"
            value={value}
            onChange={(e) => {
              const newValue = e.target.value;
              setValue(newValue);
              // Don't search while typing
              setSearchValue('');
              // Search after stopped typing
              setSearchValueDebounced(newValue);
            }}
          />
          <Search.Clear />
        </Search>
        {searchValue !== '' && (
          <div
            style={{
              display: 'flex',
              gap: 'var(--ds-size-1)',
              alignItems: 'center',
            }}
          >
            <Spinner aria-hidden data-size="xs" />
            <span>Søker etter: {searchValue}</span>
          </div>
        )}
      </Prose>
    );
  },
});
