// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<div>
  <style>
    .search-controlled-form {
          display: flex;
          flex-direction: column;
          gap: var(--ds-size-3);
        }
        .search-controlled-chip__group {
          display: flex;
          align-items: center;
          gap: var(--ds-size-3);
        }
  </style>
  <form>
    <div>
      <input
        placeholder
        id="<removed>"
        aria-label="Søk"
        type="search"
        value
      >
      <button
        data-icon="true"
        data-variant="tertiary"
        type="reset"
        aria-label="Tøm"
      >
      </button>
      <button type="submit">
        Søk
      </button>
    </div>
    <div>
      <p data-size="sm">
        Hurtigsøk:
      </p>
      <button type="button">
        Læreplaner
      </button>
      <button type="button">
        Skole
      </button>
      <button type="button">
        Eksamen
      </button>
    </div>
  </form>
</div>
`;

exports[`Form 1`] = `
<div>
  <form>
    <div>
      <input
        placeholder
        aria-label="Søk"
        type="search"
      >
      <button
        data-icon="true"
        data-variant="tertiary"
        type="reset"
        aria-label="Tøm"
      >
      </button>
      <button type="submit">
        Søk
      </button>
    </div>
  </form>
</div>
`;

exports[`Live Search 1`] = `
<style>
  .search-live-output__group {
          display: flex;
          gap: var(--ds-size-1);
          align-items: center;
        }
</style>
<div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
      value
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
  </div>
</div>
`;

exports[`Preview 1`] = `
<form>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </div>
</form>
`;

exports[`Variants 1`] = `
<div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
  </div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="secondary"
      type="submit"
    >
      Søk
    </button>
  </div>
</div>
`;

exports[`With Label 1`] = `
<ds-field>
  <label for="<removed>">
    Søk i læreplaner
  </label>
  <div>
    <input
      placeholder
      type="search"
      name="cat-search"
      id="<removed>"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </div>
</ds-field>
`;
